--- a/KibanaBackup.conf
+++ b/KibanaBackup.conf
@@ -6,9 +6,13 @@ port = 5601
 #set the location to save exported files
 backup_folder = ./KibanaBackup
 
-#change if Kibana uses TLS / SSL 
-#Currently, the server certificate is not verified
-tls = False
+# enable / disable tls
+tls = True
+
+# enable / disable certificate verification
+#valid options are : True, False, or certificate filename
+cert = True
+#cert = kibana.crt
 
 #change if Kibana requires authentication
 auth = True 
@@ -16,3 +20,24 @@ username = elastic
 password = password
 
 
+[ElasticBackup]
+
+server = 192.168.0.0
+port = 9200
+
+backup_folder = ./ElasticBackup
+
+# enable / disable tls
+tls = True
+
+# enable / disable certificate verification
+# valid options are : True, False, or certificate filename
+cert = True
+#cert = cert.pem
+
+#Authentication setting
+auth = True 
+username = elastic
+password = pasword
+
+verbose = True
