--- a/KibanaBackup.conf
+++ b/KibanaBackup.conf
@@ -18,3 +18,8 @@ cert = True
 auth = True 
 username = elastic
 password = password
+
+verbose = False
+
+#Saved Object Types to export (current as of 8.12.2)
+SavedObjectTypes = [ "config","config-global","url","index-pattern","action","query","tag","graph-workspace","alert","search","visualization","event-annotation-group","dashboard","lens","cases","metrics-data-source","links","canvas-element","canvas-workpad","osquery-saved-query","osquery-pack","csp-rule-template","map","infrastructure-monitoring-log-view","threshold-explorer-view","uptime-dynamic-settings","synthetics-privates-locations","infrastructure-ui-source","inventory-view","metrics-explorer-view","apm-indices","apm-service-group","apm-custom-dashboards"]
